--- a/Modules/BWO/Resources/assets/sass/_offers.scss
+++ b/Modules/BWO/Resources/assets/sass/_offers.scss
@@ -78,6 +78,45 @@ body{
             }
           }
         }
+        .select-container{
+          .selectBox {
+            position: relative;
+          }
+
+          .selectBox select {
+            width: 100%;
+            font-weight: bold;
+          }
+
+          .overSelect {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+          }
+
+          .checkboxes {
+          display: none;
+          border: 1px #dadada solid;
+          background-color: rgb(255, 255, 255);
+          margin-top: -15px;
+          margin-bottom: 10px;
+              max-height: 75px;
+              overflow-y:scroll;
+          label {
+            display: block;
+            padding: 7px 10px;
+            &:hover {
+              background-color: $brand-color-2;
+            }
+            input{
+              margin:3px 5px 0 0;
+              float: left;
+            }
+          }
+        }
+        }
       }
       .offers-list{
         padding: 20px 15px;
