--- a/Modules/Architect/Resources/assets/sass/architect/_sortable.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_sortable.scss
@@ -26,6 +26,7 @@ ol.sortable-list {
       width:50vw;
       padding-left: 40px;
 
+      /*
       &:before{
         content: "\25BE";
         margin-right: 0px;
@@ -41,6 +42,7 @@ ol.sortable-list {
           content: "\25B8";
         }
       }
+      */
 
     }
 
