--- a/Modules/Architect/Resources/assets/sass/architect/content/_content.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/content/_content.scss
@@ -138,7 +138,8 @@
       }
 
       .ql-editor{
-        height:100px;
+        min-height:100px;
+        max-height:100vh;
       }
 
       .field-form {
