--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -19463,7 +19463,8 @@ line.links {
 }
 
 .content .field-group .field-item .ql-editor {
-  height: 100px;
+  min-height: 100px;
+  max-height: 100vh;
 }
 
 .content .field-group .field-item .field-form {
@@ -20165,20 +20166,23 @@ ol.sortable-list li .item-bar {
   min-height: 50px;
   width: 50vw;
   padding-left: 40px;
-}
+  /*
+      &:before{
+        content: "\25BE";
+        margin-right: 0px;
+        position: absolute;
+        top: -2px;
+        left: 16px;
+        font-size: 18px;
+        color: #a0a0a0;
+      }
 
-ol.sortable-list li .item-bar:before {
-  content: "\25BE";
-  margin-right: 0px;
-  position: absolute;
-  top: -2px;
-  left: 16px;
-  font-size: 18px;
-  color: #a0a0a0;
-}
-
-ol.sortable-list li .item-bar.collapsed:before {
-  content: "\25B8";
+      &.collapsed {
+        &:before{
+          content: "\25B8";
+        }
+      }
+      */
 }
 
 ol.sortable-list li.placeholder {
