--- a/public/modules/bwo/css/app.css
+++ b/public/modules/bwo/css/app.css
@@ -11510,6 +11510,10 @@ body .candidate-container .horizontal-inner-container .candidate-list {
   padding: 20px 15px;
 }
 
+body .candidate-container .horizontal-inner-container .candidate-list h2 {
+  padding-left: 10px;
+}
+
 body .candidate-container .horizontal-inner-container .candidate-list .candidate-box {
   padding: 30px 0 0;
   height: 190px;
