--- a/Modules/BWO/Resources/assets/sass/_form.scss
+++ b/Modules/BWO/Resources/assets/sass/_form.scss
@@ -1,7 +1,9 @@
 form{
   .input-round{
-    border-radius: 15px;
+    border-radius: 200px;
   }
-
+  #resume_file{
+    border-radius:0px !important;
+  }
 
 }
