--- a/Modules/BWO/Resources/assets/sass/_blog.scss
+++ b/Modules/BWO/Resources/assets/sass/_blog.scss
@@ -9,15 +9,31 @@ body{
       margin:45px 0 20px 0;
     }
   }
-  .offers-container{
+  .widget-blog.offers-container{
+
+    padding: 0px;
+    margin-top: 0px;
+
     .blog-container{
       background-color: white;
       padding:20px;
+      padding-top:0px;
       color:$brand-dark-gray-color;
+
       .categories-container{
-        margin-top:20px;
+        margin-top:0px;
         h3{
           @include font(14,18, 600)
+          margin-top:0px;
+        }
+        ul {
+          padding: 0;
+
+          li {
+            display: inline-block;
+            list-style-type: none;
+            margin-right: 10px;
+          }
         }
       }
       .posts-list{
@@ -49,17 +65,28 @@ body{
             margin-bottom:15px;
             height: 14px;
             padding:0 15px;
-            &.description{
+
+            a {
+              color:$brand-light-gray-color;
+              &:hover{
+                text-decoration: underline;
+              }
+            }
+          }
+
+          .excerpt {
+             p {
               color:$brand-dark-gray-color;
               @include font(14,18,300);
-              margin-bottom:15px;
-              height: 100px;
+              height: auto;
             }
           }
           .detail{
             color:$brand-red-color ;
             cursor:pointer;
             text-decoration: none;
+            padding:0 15px;
+            margin-bottom:15px;
             &:hover{
               color: $brand-dark-gray-color;
               cursor:pointer;
@@ -71,5 +98,10 @@ body{
 
 
     }
+
+    .read-more {
+      text-align: center;
+    }
+
   }
 }
