--- a/Modules/BWO/Resources/assets/sass/_blog.scss
+++ b/Modules/BWO/Resources/assets/sass/_blog.scss
@@ -39,7 +39,7 @@ body{
       .posts-list{
         padding: 20px 0;
         .post-box{
-          padding: 18px 0 0;
+          padding: 0;
           text-align:left;
           -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
           -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
