--- a/public/modules/bwo/css/app.css
+++ b/public/modules/bwo/css/app.css
@@ -9930,6 +9930,19 @@ a {
   color: #fff;
 }
 
+.btn.btn-soft-gray.tag {
+  color: #666666;
+  border: 1px solid #666666;
+  background-color: transparent;
+  cursor: default;
+}
+
+.btn.btn-soft-gray.tag:hover {
+  color: #666666;
+  border: 1px solid #666666;
+  background-color: transparent;
+}
+
 .btn.btn-logout {
   padding: 8px 28px;
 }
@@ -11027,13 +11040,17 @@ body .offers-container .horizontal-inner-container form .select-container .check
   overflow-y: scroll;
 }
 
+body .offers-container .horizontal-inner-container form .select-container .checkboxes.expanded {
+  display: block;
+}
+
 body .offers-container .horizontal-inner-container form .select-container .checkboxes label {
   display: block;
   padding: 7px 10px;
 }
 
 body .offers-container .horizontal-inner-container form .select-container .checkboxes label:hover {
-  background-color: #c41a1b;
+  color: #c41a1b;
 }
 
 body .offers-container .horizontal-inner-container form .select-container .checkboxes label input {
@@ -11266,7 +11283,7 @@ body .widget-blog.offers-container .blog-container .posts-list {
 }
 
 body .widget-blog.offers-container .blog-container .posts-list .post-box {
-  padding: 18px 0 0;
+  padding: 0;
   text-align: left;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
@@ -11448,6 +11465,10 @@ body .other-posts .post-box .date {
   height: 14px;
 }
 
+body .other-posts .post-box .date a {
+  color: #d3d1ae;
+}
+
 body .other-posts .post-box p {
   color: #666666;
   font-size: 12px;
@@ -11455,7 +11476,7 @@ body .other-posts .post-box p {
   font-weight: 400;
 }
 
-body .other-posts .post-box p .read-more {
+body .other-posts .post-box a.read-more {
   text-decoration: none;
   color: #ff0000;
 }
