--- a/Modules/BWO/Resources/assets/sass/_modals.scss
+++ b/Modules/BWO/Resources/assets/sass/_modals.scss
@@ -83,8 +83,8 @@ body{
           color: $brand-color-1;
         }
         .modal-cv{
-          background-color: $brand-color-1;
-          color:#fff;
+          /*background-color: $brand-color-1;*/
+          color: $brand-dark-gray-color;
 
         }
         .modal-alerts{
@@ -105,8 +105,9 @@ body{
         width: 165px;
         float:left;
         position: relative;
-        top: -22px;
-        height: 20px;
+        top: -30px;
+        height: 28px;
+        line-height:28px;
         padding: 0 5px;
         right: -183px;
         i{
@@ -118,7 +119,11 @@ body{
         position: relative;
 
         .select2 {
-            width: 100% !important;
+            @extend .rounded;
+            width: 80% !important;
+        }
+        .select2-selection--multiple{
+          border-radius: none;
         }
       }
 
@@ -128,7 +133,7 @@ body{
         z-index: 1;
         margin: 0 auto;
         width: 350px;
-        height:24px;
+        height:30px;
         margin-left: auto;
         margin-right: auto;
         left: 0;
@@ -136,7 +141,7 @@ body{
         input{
           width: 100%;
           color: #3f3f3f;
-          @include font(13,18,100);
+          @include font(13,25,100);
         }
       }
 
@@ -148,7 +153,37 @@ body{
         z-index: 2;
         margin: 0 auto;
         width: 350px;
-        height: 24px;
+        height: 30px;
       }
     }
+}
+
+.select2-container{
+  z-index: 2500;
+}
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+  color:$brand-dark-gray-color !important;
+  background-color:$brand-light-gray-color !important;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+  border-radius: 200px !important;
+  color: $brand-white-color !important;
+  background-color:$brand-dark-gray-color !important;
+  margin-top: 0px !important;
+  padding: 4px 12px !important;
+  border:none !important;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__rendered {
+  padding: 3px 5px !important;
+}
+.select2-container--default .select2-results__option[aria-selected=true] {
+  background-color: #fff !important;
+  color: rgba(0,0,0,0.2) !important;
+}
+
+.select2-selection--multiple {
+    border-radius: 0px !important;
 }
