--- a/Modules/BWO/Resources/assets/sass/_offers.scss
+++ b/Modules/BWO/Resources/assets/sass/_offers.scss
@@ -128,58 +128,78 @@ body{
       }
       .offers-list{
         padding: 20px 15px;
-        .offer-box{
-          padding: 18px 0 0;
-          text-align:center;
-          -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
-          -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
-          box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
-          margin-bottom:20px;
-          .title{
-            padding:0 42px;
-            color:$brand-dark-gray-color;
-            @include font(20,22,600);
-            height:42px;
-            margin-bottom:10px;
-          }
-          p{
-            color:$brand-light-gray-color;
-            @include font(12,14,300);
-            margin-bottom:15px;
-            height: 14px;
-            &.description{
-              color:$brand-dark-gray-color;
-              @include font(14,18,300);
-              margin-bottom:15px;
-              height: 100px;
-              padding-left:25px;
-              padding-right:25px;
-            }
-          }
-          .buttons{
-            margin-bottom:20px;
-            a{
-              &.btn{
-                padding: 6px 28px;
-              }
-            }
-          }
-          .detail{
-            width:100%;
-            padding: 15px;
-            color:$brand-white-color;
-            @include font(18,20,600);
-            background-color: $brand-dark-gray-color;
-            cursor:pointer;
-            text-decoration: none;
-            &:hover{
-              background-color: $brand-red-color;
-              cursor:pointer;
-              text-decoration: none;
-            }
-          }
-        }
+
       }
+    }
+  }
+}
+
+.offer-box{
+  padding: 18px 0 0;
+  text-align:center;
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+  margin-bottom:20px;
+  height: 295px;
+
+  .title{
+    padding:0 42px;
+    color:$brand-dark-gray-color;
+    @include font(20,22,600);
+    height:42px;
+    margin-bottom:10px;
+    overflow: hidden;
+  }
+  p{
+    color:$brand-light-gray-color;
+    @include font(12,14,300);
+    margin-bottom:15px;
+    height: 14px;
+
+  }
+  .description{
+    p {
+      color:$brand-dark-gray-color;
+      @include font(14,18,300);
+      margin-bottom:15px;
+      height: 60px;
+      padding-left:25px;
+      padding-right:25px;
+    }
+  }
+  .buttons{
+    margin-bottom:20px;
+    height: 61px;
+    overflow: hidden;
+    padding-left:15px;
+    padding-right:15px;
+
+    a{
+      margin-right: 5px;
+      margin-bottom: 5px;
+      &.btn{
+        padding: 5px 17px;
+      }
+    }
+  }
+  .detail{
+    width:100%;
+    padding: 15px;
+    color:$brand-white-color;
+    @include font(18,20,600);
+    background-color: $brand-dark-gray-color;
+    cursor:pointer;
+    text-decoration: none;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+
+    &:hover{
+      background-color: $brand-red-color;
+      cursor:pointer;
+      text-decoration: none;
     }
   }
 }
