offers and postule

--- a/Modules/BWO/Resources/assets/sass/_buttons.scss
+++ b/Modules/BWO/Resources/assets/sass/_buttons.scss
@@ -19,6 +19,11 @@
     &:focus, &:active, &:active:focus {
       background-color:$brand-dark-gray-color;
     }
+
+    &.unactivated{
+      background-color:$brand-dark-gray-color;
+    }
+
   }
   &.btn-dark-gray{
     color: $brand-white-color;
