--- a/Modules/BWO/Resources/assets/sass/_dropzones.scss
+++ b/Modules/BWO/Resources/assets/sass/_dropzones.scss
@@ -69,7 +69,8 @@
 
     @extend .rounded;
 
-    background-color:transparent;
+    background-color:#fff;
+    border: 1px solid #ccc;
     display:inline-block;
     padding: 6px 7px;
     color:$brand-color-2;
@@ -105,7 +106,7 @@
     }
 
     .actions{
-      top: -12px;
+      top: 130px;
       pointer-events:auto;
     }
   }
@@ -181,7 +182,8 @@
 
     @extend .rounded;
 
-    background-color:transparent;
+    background-color:#fff;
+    border: 1px solid #ccc;
     display:inline-block;
     padding: 6px 7px;
     color:$brand-color-2;
@@ -217,7 +219,7 @@
     }
 
     .actions{
-      top: -14px;
+      top: 130px;
       pointer-events:auto;
     }
   }
