--- a/Modules/RRHH/Resources/assets/sass/app.scss
+++ b/Modules/RRHH/Resources/assets/sass/app.scss
@@ -3,3 +3,6 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
 @import 'backend/backend-style';
+
+@import 'variables';
+@import 'customer-users';
