--- a/public/modules/rrhh/css/app.css
+++ b/public/modules/rrhh/css/app.css
@@ -341,3 +341,50 @@ li {
   display: inline-block;
 }
 
+#customer_documents .fields-list-container {
+  padding: 0px;
+}
+
+#customer_documents .typology-field .field-name {
+  line-height: 46px;
+  text-align: left;
+  padding-left: 15px;
+  height: 46px;
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#customer_documents .typology-field .field-inputs {
+  padding-right: 100;
+}
+
+#customer_documents .typology-field .field-actions {
+  width: 80px;
+}
+
+#customer_documents .typology-field i.fa {
+  font-size: 16px;
+  padding-right: 10px;
+}
+
+#customer_documents .fields-list-container {
+  border: none;
+}
+
+#customer_documents .image-col .image {
+  background-color: #fafafa;
+  border: 1px dashed #ccc;
+  cursor: pointer;
+  padding: 70px 20px;
+}
+
+#customer_documents .image-col .image p {
+  pointer-events: none;
+}
+
+#customer_documents .image-col .image:hover {
+  border: 1px dashed #4a9fea;
+}
+
