--- a/public/modules/rrhh/css/app.css
+++ b/public/modules/rrhh/css/app.css
@@ -174,47 +174,88 @@ li {
   cursor: move;
 }
 
-/*
-//layouts
-@import 'layout';
-@import 'sidebar';
-@import 'auth';
-@import 'topnav';
-//sections
-@import 'contents';
+.field-group .btn-link {
+  width: 100%;
+  text-align: left;
+  border: 1px solid #ccc;
+  border-radius: 0px !important;
+  background-color: #dadada;
+  text-decoration: none;
+  margin: 0;
+}
 
-//compponents
-@import 'tabs';
-@import 'tables';
-@import 'threads';
-@import 'dropzones';
-@import 'modals';
-@import 'hiearchy-selector';
-@import 'connected-lists';
+.field-group .field-name {
+  color: #455660;
+  padding-left: 10px;
+  text-transform: capitalize;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 400;
+}
 
-@import 'sortable';
-@import 'dashboard';
+.field-group .field-form {
+  padding: 20px 20px 20px 30px;
+  border-left: 2px solid #ccc;
+}
 
-//contents
-@import 'jsonbuilder';
-@import 'modal';
-@import 'mediaselector';
-@import 'medias';
-@import '_content-nav';
+.field-group div.btn:not(.collapsed):before {
+  content: "\25BE";
+  margin-right: 0px;
+  position: absolute;
+  top: 9px;
+  right: 19px;
+  font-size: 18px;
+  color: #455660;
+}
 
-//tools
-@import 'sitelists';
-@import 'filelist';
+.field-group div.btn.collapsed:before {
+  content: "\25B8";
+  margin-right: 0px;
+  position: absolute;
+  top: 9px;
+  right: 19px;
+  font-size: 18px;
+  color: #455660;
+}
 
-//tags
-@import 'tags';
+.field-group #collapsematricule .btn {
+  margin: 0;
+}
 
-//candidates
-@import 'candidates';
+.file-form {
+  height: auto;
+}
 
-//offer applications
-@import 'offer-applications';
-*/
+.file-form label {
+  display: block;
+}
+
+.file-form .medias-dropfiles {
+  background-color: #fafafa;
+  border: 1px dashed #ccc;
+  cursor: pointer;
+  padding: 30px 20px;
+}
+
+.file-form .medias-dropfiles p {
+  pointer-events: none;
+}
+
+.file-form .medias-dropfiles:hover {
+  border: 1px dashed #4a9fea;
+}
+
+.file-form .file-wrapper {
+  background-color: #fafafa;
+  border: 1px dashed #ccc;
+  cursor: pointer;
+  padding: 20px 20px 10px;
+  text-align: center;
+}
+
+.file-form .file-wrapper .text-danger {
+  padding: 0;
+}
 
 #customer_users {
   margin-left: -30px;
@@ -377,7 +418,7 @@ li {
   background-color: #fafafa;
   border: 1px dashed #ccc;
   cursor: pointer;
-  padding: 70px 20px;
+  padding: 30px 20px;
 }
 
 #customer_documents .image-col .image p {
