--- a/Modules/BWO/Resources/assets/sass/_candidate.scss
+++ b/Modules/BWO/Resources/assets/sass/_candidate.scss
@@ -23,6 +23,7 @@ body{
         min-height: 190px;
         padding-top:20px;
         padding-bottom: 30px;
+
         .image{
           height: 141px;
           width: 140px;
@@ -34,6 +35,9 @@ body{
 
         }
         .information{
+          &.center{
+            text-align: center;
+          }
           @include font(18,24,400);
           color: $brand-dark-gray-color;
           text-align: center;
@@ -55,6 +59,9 @@ body{
       }
       .candidate-list{
         padding: 20px 15px;
+        .bottom{
+          margin-top:90px;
+        }s
         h2{
           padding-left:10px;
           margin-top:0px;
@@ -205,4 +212,7 @@ body{
     min-height: 270px;
   }
 
+}
+.m-b-0{
+  margin-bottom: 0px;
 }
