--- a/Modules/RRHH/Resources/assets/sass/backend/_offers.scss
+++ b/Modules/RRHH/Resources/assets/sass/backend/_offers.scss
@@ -17,12 +17,17 @@
 		.card{
 	    background: transparent;
 			border:1px solid #B0C5D1;
+			height: calc(100vh - 250px);
 			.card-body{
 				padding:7px 15px;
 				.candidate-drop-item{
 					margin:7px 0;
 					background-color:#fff;
 					padding:20px;
+					border: 1px solid #DCE5EA;
+					-webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
+					-moz-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
+					box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
 					p{
 						@include font(14,19,100);
 						margin:0;
