--- a/Modules/RRHH/Resources/assets/sass/backend/_sitelists.scss
+++ b/Modules/RRHH/Resources/assets/sass/backend/_sitelists.scss
@@ -1,15 +1,21 @@
 .sitelist {
 
     .dashed-border{
-    	border: 1px dashed #acacac;
+    	border: 1px dashed #ccc;
     	padding : 10px;
     }
 
     .content-field-dropper {
-        border: 1px dashed #acacac;
         padding: 20px;
     }
-
+    .ajouter-element{
+      width: 100%;
+      text-align: center;
+      a{
+        @include font(14,19,400);
+        padding: 10px;
+      }
+    }
     #ajouter{
     	cursor:pointer;
     	padding: 5px;
