--- a/Modules/RRHH/Resources/assets/sass/backend/_sitelists.scss
+++ b/Modules/RRHH/Resources/assets/sass/backend/_sitelists.scss
@@ -1,5 +1,9 @@
 .sitelist {
 
+    .dragable-option .form-group .form-control{
+      border:none !important;
+    }
+
     .dashed-border{
     	border: 1px dashed #ccc;
     	padding : 10px;
@@ -7,6 +11,7 @@
 
     .content-field-dropper {
         padding: 20px;
+        padding-bottom: 0px;
     }
     .ajouter-element{
       width: 100%;
@@ -26,7 +31,7 @@
     }
     .input-name-option{
     	font-weight: bold;
-        font-size: 18px;
+        font-size: 14px;
         width: 90%;
         float:left;
         margin-bottom:0px;
@@ -51,6 +56,61 @@
     }
     .dragable-option{
     	cursor:move;
+
+      border: 1px solid #ccc;
+      position: relative;
+      height: 50px;
+      overflow: hidden;
+      margin-bottom: 15px;
+      background-color: #fafafa;
+      border-radius: 6px;
+
     }
+
+    .tool-box{
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      width: 150px;
+      text-align: right;
+
+      a {
+        font-size: 12px;
+        line-height: 50px;
+        font-weight: 400;
+        display: inline-block;
+        color: #fc4b6c;
+      }
+
+    }
+
+    .content-add {
+
+      padding-right: 170px;
+      padding-left: 20px;
+
+
+      input {
+        width: 45%;
+        margin-right: 5%;
+        height: 38px;
+      }
+    }
+
     /* END DRAG AND DROP */
+
+    .page-row {
+      border: 1px dashed #ccc;
+      text-align: center;
+      width: 100%;
+      padding: 10px 5px;
+      margin-bottom: 0px;
+      min-height: 90px;
+
+    }
+
+    .form-group.form-group-lg {
+      padding-bottom: 0px !important;
+    }
+
 }
