--- a/public/modules/bwo/css/app.css
+++ b/public/modules/bwo/css/app.css
@@ -15066,6 +15066,103 @@ body .doc-col {
   right: 100px;
 }
 
+#customer_documents .dz-preview {
+  display: none;
+}
+
+#customer_documents .container {
+  width: 100% !important;
+}
+
+#customer_documents .btn-default {
+  background-color: #e0e0e0;
+}
+
+#customer_documents .fields-list-container {
+  padding: 0px;
+}
+
+#customer_documents .typology-field .field-type {
+  display: inline-block;
+  width: 150px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 14px;
+  line-height: 30px;
+  font-weight: 500;
+  padding-left: 20px;
+  border-right: 1px solid #ccc;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#customer_documents .typology-field .field-actions {
+  position: absolute;
+  top: 11px;
+  right: 0px;
+  border-left: 1px solid #ccc;
+  padding-left: 20px;
+  height: 20px;
+}
+
+#customer_documents .typology-field .field-actions a {
+  font-size: 12px;
+  line-height: 50px;
+  font-weight: 400;
+  display: inline-block;
+}
+
+#customer_documents .typology-field a.remove-field-btn {
+  color: #fc4b6c;
+}
+
+#customer_documents .typology-field .field-name {
+  line-height: 46px;
+  text-align: left;
+  padding-left: 15px;
+  height: 46px;
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#customer_documents .typology-field .field-inputs {
+  padding-right: 100;
+  position: relative;
+  padding-left: 160px;
+  padding-top: 2px;
+}
+
+#customer_documents .typology-field .field-actions {
+  width: 80px;
+}
+
+#customer_documents .typology-field i.fa {
+  font-size: 16px;
+  padding-right: 10px;
+}
+
+#customer_documents .fields-list-container {
+  border: none;
+}
+
+#customer_documents .image-col .image {
+  background-color: #fafafa;
+  border: 1px dashed #ccc;
+  cursor: pointer;
+  padding: 30px 20px;
+}
+
+#customer_documents .image-col .image p {
+  pointer-events: none;
+}
+
+#customer_documents .image-col .image:hover {
+  border: 1px dashed #000;
+}
+
 .paginator ul li {
   display: inline-block;
   padding: 0 8px;
