--- a/Modules/BWO/Resources/assets/sass/_offers.scss
+++ b/Modules/BWO/Resources/assets/sass/_offers.scss
@@ -128,7 +128,16 @@ body{
       }
       .offers-list{
         padding: 20px 15px;
-
+        .title-search{
+          padding: 0 42px;
+          color: #666666;
+          font-size: 20px;
+          line-height: 22px;
+          font-weight: 600;
+          height: 42px;
+          margin-bottom: 10px;
+          overflow: hidden;
+        }
       }
     }
   }
